[gd_scene load_steps=3 format=3 uid="uid://b46pstsjsb3p3"]

[ext_resource type="Script" path="res://scripts/enemy/fish_spawner.gd" id="1_taudh"]
[ext_resource type="Texture2D" uid="uid://bqt1xxau8rx7t" path="res://art/enemy/warning_sign.png" id="2_di4kb"]

[node name="fish_spawner" type="Node2D"]
script = ExtResource("1_taudh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(2, -65)
texture = ExtResource("2_di4kb")

[node name="start_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="flash_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="flash_timer" to="." method="_on_flash_timer_timeout"]
